# afair

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  VISION.md  fly.dev.toml  fly.toml  fly.toml.example  litestream.yml  pyproject.toml  release-please-config.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-merge-dependabot.yml  ci.yml  deploy.yml  hourly-backup.yml  provision.yml  release-please.yml  release.yml  retire.yml  security.yml
afair/: __init__.py  __main__.py  admin.py  settings.py
afair/agents/: __init__.py  binary_extractors.py  binder.py  blob_sweeper.py  cold_path.py  conflict_resolver.py  consolidator.py  edge_scorer.py  embedding.py  entity_articles.py  entity_audit.py  entity_canonicalizer.py  entity_dedup.py  expectation_checker.py  extraction_retry.py  extractor.py  guards.py  interpretation.py  invalidation.py  living_syntheses.py  llm.py  llm_judge.py  mode_switcher.py  prompts.py  pruner.py  replay.py  rollback_monitor.py  salience.py  schema_evolver.py  surprise.py  temporal.py  tunable_registry.py  tuner.py  untrusted.py  verdicts.py
afair/eval/: __init__.py  memory_quality.py  regression.py  retrieval_quality.py
afair/eval/fixtures/: memory_quality.jsonl  regression_baseline.json  retrieval_quality.jsonl
afair/mcp/: __init__.py  api_tokens.py  auth.py  blob_upload_route.py  body_limit.py  context.py  correct_route.py  corrections_route.py  correlation.py  cors.py  descriptions.py  export_async_routes.py  export_job.py  export_route.py  handlers.py  host_canon.py  import_route.py  internal_auth.py  landing.py  memory_mirror_route.py  rate_limit.py  resources.py  schemas.py  security_headers.py  server.py  signup_route.py  surface.py  tokens_route.py
afair/mcp/oauth/: identity_hub.py  jwt.py  routes.py  storage.py
afair/observability/: __init__.py  logging.py  sentry.py
afair/substrate/: __init__.py  belief.py  blob_gc.py  checkpoint.py  confidence.py  conflict_resolutions.py  content_corrections.py  corrections.py  db.py  edge_confidence.py  encryption.py  entities.py  event_records.py  events.py  export_jobs.py  kinds.py  objects.py  observability.py  ontology.py  payload.py  pipeline_events.py  provenance.py  recovery.py  schema.py  search.py  sqlutil.py  temporal.py  tuner_state.py  watermarks.py
analysis/: 2026-05-28-observability-strategy.md  2026-06-03-recursive-self-improvement.md  2026-06-27-memory-relevance-decay-spec.md  build-log.md  phase-0-journal.md
docs/: operations.md  self-hosting.md
docs/adr/: ADR-0001-constitutional-invariants.md  ADR-0002-belief-revision-derived-layer.md  ADR-0003-emergent-ontology.md  ADR-0004-edge-confidence-model.md  ADR-0005-telemetry-retention.md  ADR-0006-event-provenance.md  ADR-0007-emergent-living-syntheses.md  ADR-0008-operator-conflict-resolution.md  ADR-0009-operator-content-correction.md
docs/clients/: README.md  _snippet.md  antigravity.md  chatgpt.md  claude-ai.md  claude-code.md  codex.md  copilot-cli.md  copilot.md  cursor.md  gemini-cli.md  perplexity.md  windsurf.md
neverforget/: __main__.py  admin.py  settings.py
neverforget/agents/: __init__.py  cold_path.py  conflict_resolver.py  consolidator.py  embedding.py  entity_canonicalizer.py  extractor.py  interpretation.py  llm.py  prompts.py
neverforget/mcp/: __init__.py  auth.py  context.py  descriptions.py  handlers.py  landing.py  rate_limit.py  schemas.py  security_headers.py  server.py
neverforget/mcp/oauth/: __init__.py  jwt.py  metadata.py  routes.py  storage.py
neverforget/mcp/oauth/identity/: __init__.py  base.py  github.py
neverforget/substrate/: __init__.py  checkpoint.py  db.py  entities.py  events.py  objects.py  payload.py  schema.py  search.py
scripts/: audit_dryrun.py  backfill_entities.py  bench.py  bench_recall.py  check_secrets.py  checkup_entities.py  drain_entity_dedup.py  dump_mcp_surface.py  encrypt_existing_vault.py  import_export.py  install_clients.py  invalidate_signup_tests.py  onboarding_email.py  provision_user.py  rebuild_vault.py  recover_user.py  retire_user.py  smoke.sh  smoke_mcp.py  start.sh
scripts/claude_code_hooks/: session_start.py
tests/: test_api_tokens.py  test_asserted_by.py  test_auth.py  test_auto_route.py  test_backfill_entities.py  test_belief.py  test_binary_extractors.py  test_blob_gc.py  test_blob_upload.py  test_body_limit.py  test_canonicalizer_budget_defer.py  test_check_secrets.py  test_checkpoint.py  test_checkup_entities.py  test_cold_path.py  test_compound_events.py  test_conflict_resolutions.py  test_correct_route.py  test_corrections.py  test_corrections_migration.py  test_corrections_route.py  test_correlation.py  test_drain_entity_dedup.py  test_edge_confidence_model.py  test_edge_confidence_store.py  test_edge_scorer.py  test_embedding.py  test_encryption.py  test_entities.py  test_entity_articles.py  test_entity_audit.py  test_entity_canonicalizer.py  test_entity_dedup.py  test_entity_dedup_split_guard.py  test_entity_dedup_unify.py  test_entity_kind_decoupling.py  test_entity_query_routing.py  test_eval_regression.py  test_eval_retrieval_quality.py  test_event_provenance.py  (+68 more)
tests/goldens/: mcp_surface.json
