[project]
name = "afair"
version = "0.1.0"
description = "Your memory across every AI you use: a self-hostable, append-only memory vault for AI assistants, over MCP."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
authors = [
    { name = "Gowrynath Sivaganeshamoorthy", email = "gowrynath@gmail.com" },
]

dependencies = [
    # MCP server framework (Streamable HTTP transport)
    "fastmcp>=2.0.0",
    # HTTP framework under FastMCP
    "fastapi>=0.137.0",
    "uvicorn[standard]>=0.32.0",
    # Validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.14.2",
    # Substrate storage — SQLite + vector search
    "sqlite-vec>=0.1.6",
    # SQLCipher (Stufe 1 encryption) — whole-database AES-256 encryption.
    # Drop-in replacement for stdlib sqlite3; PRAGMA key on connect.
    # Bundled-binary wheel only exists for Linux. macOS local dev runs
    # without it and falls back to plaintext sqlite3 (acceptable: prod
    # boot validator forbids missing vault key in fly environment, but
    # local dev never has the key set in the first place).
    "sqlcipher3-binary>=0.5.4; sys_platform == 'linux'",
    # AES-256-GCM for the filesystem blob store (Stufe 1 encryption).
    # cryptography is widely audited, BSD-licensed; includes Python
    # bindings to the system-or-bundled OpenSSL.
    "cryptography>=44.0.0",
    # Time-sortable identifiers for substrate events
    "python-ulid>=3.0.0",
    # GitHub OAuth client (for the identity-backend dance)
    "httpx-oauth>=0.15.0",
    # JWT signing/verification for the OAuth resource server (we issue +
    # verify HS256 tokens; PKCE/DCR are implemented directly, not via Authlib)
    "pyjwt[crypto]>=2.13.0",
    # LLM provider abstraction (Invariant I5 — vendor neutrality)
    "litellm>=1.52.0",
    # Local ONNX embeddings — opt-in vendor for the embedding hot path.
    # Switching to fastembed/* eliminates the 150-300ms OpenAI roundtrip
    # on every recall. Uses ~150MB resident; first run downloads the model
    # (~100MB) then caches in ~/.cache/fastembed.
    "fastembed>=0.4.0",
    # Faster event loop than asyncio default; uvicorn picks it up via
    # loop='uvloop'. Linux-only (Fly runs Linux); harmless on dev macOS.
    "uvloop>=0.20.0; sys_platform != 'win32'",
    # Structured logging
    "structlog>=26.1.0",
    # HTTP client
    "httpx>=0.27.0",
    # Binary content extraction (multi-modal Phase 1 — PDF text, audio
    # via litellm/whisper, image via litellm vision-capable models).
    # pypdf is pure-Python, MIT, no system deps — extracts text from any
    # PDF that has a text layer. Scanned (image-only) PDFs fall through
    # to the image-vision path automatically because their text extract
    # comes back empty and the page-renders are sent to a vision model.
    "pypdf>=4.0.0",
    "sentry-sdk[fastapi,starlette]>=2.61.1",
]

[project.scripts]
afair = "afair.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.17",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["afair"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # bugbear
    "UP",       # pyupgrade
    "RUF",      # ruff-specific
    "SIM",      # simplify
    "TCH",      # type-checking
]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
